<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_units"
        android:icon="@drawable/units_selector"
        android:title="@string/title_units" />
    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/tracking_selector"
        android:title="@string/title_tracking" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifications_selector"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/contact_selector"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/title_profile" />


</menu>
