<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_units"
        android:name="com.pnla.onroadplus.z_version2.fragments.contactV2.view.FragmentContactV2"
        android:label="@string/title_units"
        tools:layout="@layout/fragment_contact"/>

    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.pnla.onroadplus.z_version2.fragments.mapV2.view.FragmentMapV2"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_map_v2" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pnla.onroadplus.z_version2.fragments.notifications_v2.view.FragmentNotificationsV2"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_v2" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.pnla.onroadplus.z_version2.fragments.contactV2.view.FragmentContactV2"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pnla.onroadplus.z_version2.MenuFragments.Profile.view.ProfileViewImpl"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_contact" />

</navigation>