<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include
        android:id="@+id/toolbar_contact"
        layout="@layout/default_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/textAccentColor"
            android:text="Para:"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/edtEmailSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/textEmailSupport"
            android:layout_gravity="center"
            android:textSize="15dp"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/textCopy"
            android:textColor="@color/textAccentColor"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/edtCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:textColor="@color/textAccentColor"
            android:layout_gravity="center"
            android:textSize="15dp"/>

    </LinearLayout>


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/textSubject"
            android:textColor="@color/textAccentColor"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/edtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/textAccentColor"
            android:layout_gravity="center"
            android:textSize="15dp"/>

    </LinearLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor"
        />

    <EditText
        android:id="@+id/edtMessageEmail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:lines="100"
        android:overScrollMode="always"
        android:padding="16dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textColor="@color/textAccentColor"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="42dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/colorOrangeYellow"
            app:cardCornerRadius="6dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Enviar mensaje"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>




</LinearLayout>